Scrollbar fix

--- a/src/sass/_comparison.scss
+++ b/src/sass/_comparison.scss
@@ -22,6 +22,10 @@
     height: 1.5rem;
     width: 0;
   }
+  & {
+    scrollbar-width: thin;
+    scrollbar-color: $thumbBG $scrollbarBG;
+  }
   &::-webkit-scrollbar-track {
     background: $scrollbarBG;
   }
